# Al-Salam-App

./: .env  .gitignore  README.md  pyproject.toml  start.sh
application/: models.py  urls.py  views.py
authentication/: admin.py  models.py  serializers.py  urls.py  views.py
dashboard/: admin.py  models.py  serializers.py  urls.py  views.py
data/: __init__.py
locale/ar/LC_MESSAGES/: django.mo  django.po
middlewares/: LanguageMiddleware.py
products/: models.py  serializers.py  urls.py  views.py
server/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_name.py
utils/: constants.py  helpers.py  pagination.py  permissions.py
